[gd_scene load_steps=12 format=3 uid="uid://d26majiwami8u"]

[ext_resource type="Script" uid="uid://o52wl5acbuc8" path="res://Scripts/Menu/pause_menu.gd" id="1_vp8nw"]
[ext_resource type="VideoStream" uid="uid://bccjs2um4sifs" path="res://Sprites/Menu/PauseVideo.ogv" id="2_lmtvr"]
[ext_resource type="VideoStream" uid="uid://dfh7k6b2d37hl" path="res://Sprites/Menu/DespauseVideo.ogv" id="3_jvxnt"]
[ext_resource type="Texture2D" uid="uid://c7np1pw8eyl4c" path="res://Sprites/Menu/FundoPause.jpeg" id="4_lmtvr"]
[ext_resource type="Texture2D" uid="uid://bh4ikt3cqkxdt" path="res://Sprites/Menu/jogar.png" id="5_cylht"]
[ext_resource type="Texture2D" uid="uid://bgvj4winy0elt" path="res://Sprites/Menu/opcoes.png" id="6_xo07c"]
[ext_resource type="Texture2D" uid="uid://4li17i80a4cf" path="res://Sprites/Menu/jogar_apagado.png" id="6_xwfrm"]
[ext_resource type="Texture2D" uid="uid://ccu18y46la74d" path="res://Sprites/Menu/sair.png" id="7_a7kgo"]
[ext_resource type="Texture2D" uid="uid://divbo35e3qmdx" path="res://Sprites/Menu/opcoes_apagado.png" id="8_eiucx"]
[ext_resource type="Texture2D" uid="uid://dhpv31y0qpyuj" path="res://Sprites/Menu/sair_apagado.png" id="10_nmk0b"]
[ext_resource type="PackedScene" uid="uid://b2pnn1csceu83" path="res://UI_UX/mira.tscn" id="11_eiucx"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vp8nw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PauseVideo" type="VideoStreamPlayer" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_lmtvr")
volume_db = -80.0
expand = true
buffering_msec = 10

[node name="DespauseVideo" type="VideoStreamPlayer" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_jvxnt")
volume_db = -80.0
expand = true
buffering_msec = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lmtvr")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 827.0
offset_top = 367.0
offset_right = 900.0
offset_bottom = 426.0
scale = Vector2(4, 4.233)
alignment = 1

[node name="ResumeButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_cylht")
texture_hover = ExtResource("6_xwfrm")
stretch_mode = 4

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_xo07c")
texture_hover = ExtResource("8_eiucx")
stretch_mode = 4

[node name="QuitButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_a7kgo")
texture_hover = ExtResource("10_nmk0b")
stretch_mode = 4

[node name="Mira" parent="CanvasLayer" instance=ExtResource("11_eiucx")]
position = Vector2(598.563, 285.347)

[connection signal="finished" from="CanvasLayer/PauseVideo" to="." method="_on_pause_video_finished"]
[connection signal="finished" from="CanvasLayer/DespauseVideo" to="." method="_on_pause_video_2_finished"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
